src/components/components.css
.page {
  color: #edf5e1;
  display: grid;
  grid-template-rows: 1fr 1fr 10fr 1fr;
  height: 100%;
  grid-template-columns: 1fr 9fr 1fr;
}

.intro {
  color: #2c3531;
  background-size: cover;
  background-position: center;
  animation: fadein 2s;
}

.title {
  text-align: left;
  font-size: 3rem;
  grid-row: 2/3;
  grid-column: 2/3;
}

.header {
  margin-top: 3%;
  margin-left: 8%;
  font-size: 2em;
}

.inner {
  display: flexbox;
  height: 100%;
  text-align: left;
  grid-row: 3/4;
  grid-column: 2/3;
}

.list {
  margin-left: 14%;
}

.link {
  color: #2c3531;
}

.mtn {
  opacity: 0.5;
}

.prof-pic {
  z-index: -1;
  position: fixed;
  border-radius: 500px;
  margin-left: 30%;
  margin-top: 40vh;
  width: 500px;
  justify-self: center;
}

.contact {
  margin-left: 5vw;
}

p {
  text-indent: 50px;
}

a {
  color: #2c3531;
}

.about {
  max-width: 600px;
  margin-left: 10%;
}

@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@media only screen and (min-width: 501px), (max-height: 426px) {
  .dd {
    display: none;
  }
}

@media only screen and (min-width: 1000px), (max-height: 425px) {
  .prof-pic {
    width: 700px;
  }
}

@media only screen and (max-width: 500px), (max-height: 425px) {
  .title {
    font-size: 2rem;
  }

  h4 {
    font-size: 16px;
  }

  p {
    font-size: 16px;
  }

  .prof-pic {
    width: 200px;
  }

  .header {
    font-size: 1rem;
  }

  .list {
    font-size: 1rem;
    margin-left: 3%;
  }
}

